--- a/styles/general.css
+++ b/styles/general.css
@@ -12,6 +12,7 @@ body{
   min-height: 100dvh;
   height: 100dvh;
   overflow: hidden;
+  font-size: 24px;
 }
 
 h1{
