--- a/styles/imprint.css
+++ b/styles/imprint.css
@@ -31,7 +31,7 @@ body {
   text-decoration: none;
   border-radius: 8px;
   font-family: 'zabars', sans-serif;
-  font-size: 18px;
+  font-size: 24px;
   transition: background-color 0.3s, transform 0.2s;
   z-index: 1000;
   letter-spacing: 1px;
@@ -61,7 +61,7 @@ body {
 
 .impressumContainer p {
   line-height: 1.8;
-  font-size: 18px;
+  font-size: 24px;
   margin-bottom: 10px;
   letter-spacing: 1px;
 }
@@ -71,6 +71,6 @@ body {
   color: #ff6b00;
   margin-top: 15px;
   margin-bottom: 10px;
-  font-size: 22px;
+  font-size: 28px;
   letter-spacing: 1.5px;
 }
